--- a/angular-app-wons/package.json
+++ b/angular-app-wons/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-app-wons2",
+  "name": "angular-app-wons",
   "description": "Hyperledger Composer Angular project",
   "version": "0.0.1",
   "author": "ja",
@@ -10,7 +10,7 @@
     "npm": ">=5"
   },
   "bin": {
-    "angular-app-wons2": "app.js"
+    "angular-app-wons": "app.js"
   },
   "scripts": {
     "ng": "ng",
