--- a/angular-app-wons/package.json
+++ b/angular-app-wons/package.json
@@ -34,6 +34,7 @@
     "@angular/router": "^4.0.0",
     "bootstrap": "^3.3.7",
     "cfenv": "^1.0.4",
+    "composer-client": "^0.19.2",
     "concurrently": "^3.1.0",
     "config": "^1.21.0",
     "core-js": "^2.4.1",
