--- a/angular-app-wons/package.json
+++ b/angular-app-wons/package.json
@@ -43,6 +43,8 @@
     "express": "^4.16.3",
     "http-proxy-middleware": "^0.18.0",
     "jquery": "^3.2.1",
+    "request": "^2.85.0",
+    "request-promise": "^4.2.2",
     "require": "^2.4.20",
     "requirejs": "^2.3.5",
     "rxjs": "^5.1.0",
